--- a/index.html
+++ b/index.html
@@ -33,7 +33,29 @@
             </nav>
         </div>
     </header>
-
+    <main>
+        <section class="hero">
+            <div class="container">
+                <div class="hero-content-wrapper">
+                    <div class="microphone-wrapper">
+                        <img class="circle" src="assets/hero-circle.png" alt="Circle">
+                        <img class="microphone" src="assets/microphone.png" alt="Microphone">
+                        <p class="new-text">New</p>
+                    </div>
+                    <div class="hero-content">
+                        <div class="hero-title">
+                            <h1 class="h1">TechWave</h1>
+                            <p class="body-16px">Your daily dose of tech insights, productivity hacks, and personal growth</p>
+                        </div>
+                        <div class="hero-buttons">
+                            <button class="hero-button"><i class="fa-brands fa-spotify"></i>Listen on Spotify</button>
+                            <button class="border-btn"><i class="fa-regular fa-envelope"></i>Subscribe</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
