--- a/index.html
+++ b/index.html
@@ -45,11 +45,37 @@
                     <div class="hero-content">
                         <div class="hero-title">
                             <h1 class="h1">TechWave</h1>
-                            <p class="body-16px">Your daily dose of tech insights, productivity hacks, and personal growth</p>
+                            <p class="body-16px">Your daily dose of tech insights, productivity hacks, and personal
+                                growth</p>
                         </div>
                         <div class="hero-buttons">
                             <button class="hero-button"><i class="fa-brands fa-spotify"></i>Listen on Spotify</button>
                             <button class="border-btn"><i class="fa-regular fa-envelope"></i>Subscribe</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="about">
+            <div class="container">
+                <div class="about-content-wrapper">
+                    <div class="about-title">
+                        <h2 class="h2">About the Podcast</h2>
+                        <p class="body-16px">TechWave is your go-to podcast for staying ahead in the fast-paced world of
+                            technology.<br><br>
+                            We break down complex topics into digestible insights, explore productivity strategies that
+                            actually work, and share stories of personal growth from industry leaders.
+                            <br>
+                            <br><br>
+                            Join thousands of young professionals and tech enthusiasts who start their day with
+                            TechWave.
+                        </p>
+                    </div>
+                    <div class="line"></div>
+                    <div class="stats-wrapper">
+                        <div class="stat">
+                            <h2 class="h2">150K+</h2>
+                            <p class="body-16px">Monthly Listeners</p>
                         </div>
                     </div>
                 </div>
