About Section Done

--- a/index.html
+++ b/index.html
@@ -77,6 +77,18 @@
                             <h2 class="h2">150K+</h2>
                             <p class="body-16px">Monthly Listeners</p>
                         </div>
+                        <div class="stat">
+                            <h2 class="h2">200+</h2>
+                            <p class="body-16px">Episodes Published</p>
+                        </div>
+                        <div class="stat">
+                            <h2 class="h2">4.9★</h2>
+                            <p class="body-16px">Average Rating</p>
+                        </div>
+                        <div class="stat">
+                            <h2 class="h2">50+</h2>
+                            <p class="body-16px">Industry Experts</p>
+                        </div>
                     </div>
                 </div>
             </div>
