--- a/index.html
+++ b/index.html
@@ -93,6 +93,49 @@
                 </div>
             </div>
         </section>
+        <section class="why-choose-us">
+            <div class="container">
+                <div class="why-content-wrapper">
+                    <h2 class="h2">Why Choose TechWave</h2>
+                    <div class="why-cards-wrapper">
+
+                        <div class="why-card card-1">
+                            <img src="assets/headphone.png">
+                            <h3 class="h3">Premium Audio Quality</h3>
+                            <p class="body-2-16px">Experience crystal-clear sound with professional-grade recording
+                                equipment and expert audio engineering. Every episode is mastered for optimal listening
+                                across all devices and platforms.</p>
+                        </div>
+                        <div class="why-card card-2">
+                            <img src="assets/device.png">
+                            <h3 class="h3">Mobile Friendly</h3>
+                            <p class="body-2-16px">Listen on the go with seamless mobile experience and offline downloads.
+                            </p>
+                        </div>
+                        <div class="why-card card-2">
+                            <img src="assets/location.png">
+                            <h3 class="h3">Global Community</h3>
+                            <p class="body-2-16px">Connect with tech enthusiasts from over 120 countries worldwide.</p>
+                        </div>
+                        <div class="why-card card-2">
+                            <img src="assets/zap-fast.png">
+                            <h3 class="h3">Exclusive Interviews</h3>
+                            <p class="body-2-16px">Get unprecedented access to industry titans, startup founders, and tech
+                                visionaries. Our host secures exclusive conversations you won't find anywhere else,
+                                diving deep into their journeys, failures, and success strategies.</p>
+                        </div>
+                        <div class="why-card card-3">
+                            <img src="assets/resource.png">
+                            <h3 class="h3">Rich Resources</h3>
+                            <p class="body-2-16px">Access show notes, transcripts, and additional learning materials for
+                                every episode.</p>
+                        </div>
+
+
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
