--- a/index.html
+++ b/index.html
@@ -136,6 +136,39 @@
                 </div>
             </div>
         </section>
+        <section class="apps">
+            <div class="container">
+                <div class="episode">
+                    <h2 class="h2">Featured Episodes</h2>
+                    <div class="episode-wrapper">
+                        <div class="episode-card">
+                            <iframe width="100%" height="215" src="https://www.youtube.com/embed/UEZqlBgDUbM?si=5qtSl4ThaQ_EafaW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <div class="episode-content">
+                                <h3 class="h3">The Future of AI in Everyday Life</h3>
+                                <p class="body-2-16px">Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
+                                <div class="duration"><i class="fa-solid fa-clock"></i><p>42 min</p></div>
+                            </div>
+                        </div>
+                        <div class="episode-card">
+                           <iframe width="100%" height="215" src="https://www.youtube.com/embed/5gKXXBZLD44?si=SZTWd-bY_LoDXdlb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <div class="episode-content">
+                                <h3 class="h3">Building Better Habits for Remote Work</h3>
+                                <p class="body-2-16px">Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
+                                <div class="duration"><i class="fa-solid fa-clock"></i><p>35 min</p></div>
+                            </div>
+                        </div>
+                        <div class="episode-card">
+                            <iframe width="100%" height="215" src="https://www.youtube.com/embed/wwpdpDwka9U?si=lM14U2inaBIWahQY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <div class="episode-content">
+                                <h3 class="h3">Career Growth in Tech: A Roadmap</h3>
+                                <p class="body-2-16px">Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
+                                <div class="duration"><i class="fa-solid fa-clock"></i><p>51 min</p></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
