--- a/index.html
+++ b/index.html
@@ -167,6 +167,22 @@
                         </div>
                     </div>
                 </div>
+                <div class="host">
+                    <h2 class="h2">Meet the Host</h2>
+                    <div class="host-speech">
+                        <img src="assets/host.png" alt="Host Image">
+                        <div class="speech">
+                            <h3>Alex Kumar</h3>
+                            <p class="body-2-16px">Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
+                            <div class="socials">
+                                <a class="social-icon" href="https://www.linkedin.com/"><img src="assets/linkedin.png" alt="linkedin"></a>
+                                <a class="social-icon" href="https://www.x.com/"><img src="assets/x.png" alt="x"></a>
+                                <a class="social-icon" href="https://www.instagram.com/"><img src="assets/instagram.png" alt="instagram"></a>
+                                <a class="social-icon" href="https://www.youtube.com/"><img src="assets/youtube.png" alt="linkedin"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
