--- a/index.html
+++ b/index.html
@@ -186,6 +186,20 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <img class="footer-logo" src="assets/TechWave.png" alt="TechWave">
+                <div class="follow">
+                    <a class="social-media" href=""><img src="assets/spotify.png" alt="spotify"><p class="body-2-16px">Spotify</p></a>
+                    <a class="social-media" href=""><img src="assets/apple-podcast.png" alt="apple-podcast"><p class="body-2-16px">Apple Podcasts</p></a>
+                    <a class="social-media" href=""><img src="assets/youtube-podcast.png" alt="youtube"><p class="body-2-16px">YouTube</p></a>
+                    <a class="social-media" href=""><img src="assets/twitter.png" alt="twitter"><p class="body-2-16px">Twitter</p></a>
+                </div>
+                <p class="body-2-16px">© 2026 TechWave Podcast. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
