--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                     <img class="hamburger" src="assets/hamburger-menu.png" alt="Menu Icon">
                 </div>
                 <ul class="menu">
-                    <li><a href="">About</a></li>
-                    <li><a href="">Episodes</a></li>
-                    <li><a href="">Host</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#episode">Episodes</a></li>
+                    <li><a href="#host">Host</a></li>
                 </ul>
                 <button class="btn header-btn">Subscribe <i class="fa-solid fa-arrow-right"></i></button>
             </nav>
@@ -56,7 +56,7 @@
                 </div>
             </div>
         </section>
-        <section class="about">
+        <section id="about" class="about">
             <div class="container">
                 <div class="about-content-wrapper">
                     <div class="about-title">
@@ -138,7 +138,7 @@
         </section>
         <section class="apps">
             <div class="container">
-                <div class="episode">
+                <div id="episode" class="episode">
                     <h2 class="h2">Featured Episodes</h2>
                     <div class="episode-wrapper">
                         <div class="episode-card">
@@ -167,7 +167,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="host">
+                <div id="host" class="host">
                     <h2 class="h2">Meet the Host</h2>
                     <div class="host-speech">
                         <img src="assets/host.png" alt="Host Image">
